# Alter_Jira

./: README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: person.py  task.py
src/config/: db.py  settings.py
src/model/: person.py  task.py
src/services/: person.py  task.py
src/structs/: task.py
