[tool.poetry]
name = "alter-jira"
version = "0.1.0"
description = ""
authors = ["mihail samofalov <misasamofalov611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
